compiler/test-data/parser/contract/errors/missing_contract_name.frel
module contract.errors.missing_contract_name

contract {
    get_data() : String
}
